--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
     <!-- <link rel="icon" type="image/png" href="favicon.png"> -->
 </head>
 <body>
+    <!-- loader -->
+    <div class="loader hidden">
+        <img src="rocket.svg" alt="Rocket Loading Animation">
+    </div>
+    <!-- container -->
+    <div class="container">
+        <!-- navigation -->
+        <div class="navigation-container">
+         
+            <!-- results nav -->
+            <span class="navigation-items" id="resultsNav">
+                <h3 class="clickable" onclick="updateDOM('favorites')">Favourites</h3>
+                <h3>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;</h3>
+                <h3 class="clickable" onclick="getNasaPictures()">Load More</h3>
+            </span>
+            <!--  favourites nav -->
+            <span class="navigation-items hidden" id="favoritesNav">
+                <h3 class="clickable" onclick="getNasaPictures()">Load More NASA Images</h3>
+            </span>
+        </div>
+        <!-- images container -->
+        <div class="images-container"></div>
+
+    </div>
+    <!-- save confirmation -->
+    <div class="save-confirmed" hidden>
+        <h1>ADDED!</h1>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
